--- a/AppEntregaInt/templates/AppEntregaInt/equipo.html
+++ b/AppEntregaInt/templates/AppEntregaInt/equipo.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipo</title>
-</head>
-<body style="background-color: red;">
-    <p>soy el equipo</p>
-</body>
-</html>
+{% extends 'AppEntregaInt/padre.html'%}  
+{% load static %}
+{% block contenidoQueCambia %}
+
+<!--Aquí va lo que cambia, y lo asociado a está vista :) -->
+<h1>Equipo</h1>
+<p>Aca va el contendo de equipo</p>
+
+
+
+
+{% endblock %}
