Entrega Intermedia lista

--- a/AppEntregaInt/templates/AppEntregaInt/inicio.html
+++ b/AppEntregaInt/templates/AppEntregaInt/inicio.html
@@ -3,10 +3,11 @@
 {% block contenidoQueCambia %}
 
 <!--Aquí va lo que cambia, y lo asociado a está vista :) -->
-<h1>Este es el título del Inicio que cambio</h1>
-<p>Se ha heredado todo desde la plantilla padre</p>
+<br>
+<h2>Estas volviendo a la web de Inicio :)</h2>
+<p>Se uso herencia para este trabajo practico</p>
 
-<h3>En el hijo, inicio.html, casí no hay nada :)</h3>
+
 
 
 {% endblock %}
