--- a/AppEntregaInt/templates/AppEntregaInt/padre.html
+++ b/AppEntregaInt/templates/AppEntregaInt/padre.html
@@ -27,7 +27,7 @@
                 <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
                 <a class="navbar-brand" href="{% url 'regressiontest' %}">Regression Test</a>
                 <a class="navbar-brand" href="{% url 'unittest' %}">Unit Test</a>
-                <a class="btn btn-primary" href="#NADAAUN">INICIAR</a>
+                <a class="btn btn-primary" href="#NADAAUN">Sin uso de momento :)</a>
             </div>
         </nav>
 
@@ -38,7 +38,7 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Nuestra web Intermedia de Django - CoderHouse</h1>
+                            <h1 class="mb-5">Registro de unit y regression test de equipos de IT</h1>
                             <!-- Signup form-->
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
